--- a/src/Modules/MasterModule/Generic/Generic.xaml
+++ b/src/Modules/MasterModule/Generic/Generic.xaml
@@ -1,11 +1,16 @@
 ﻿<ResourceDictionary  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                     xmlns:karveControls="clr-namespace:KarveControls;assembly=KarveControls"
-                     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-                     xmlns:mvvm1="http://prismlibrary.com/"
-                     xmlns:template="clr-namespace:KarveControls.Template;assembly=KarveControls">
+                    xmlns:KarveControls="clr-namespace:KarveControls;assembly=KarveControls"
+                    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+                    xmlns:common="clr-namespace:MasterModule.Common;assembly=MasterModule"
+                    xmlns:mvvm1="http://prismlibrary.com/"
+                    xmlns:template="clr-namespace:KarveControls.Template;assembly=KarveControls">
+
+    <common:BillingIntervalConverter x:Key="BillingConverter"/>
+
+
     <DataTemplate x:Key="DataFieldDataTemplate">
-        <karveControls:DataField LabelText="{Binding LabelText, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+        <KarveControls:DataField LabelText="{Binding LabelText, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                          TextContent="{Binding TextContent, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                          TextContentWidth="{Binding TextContentWidth, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                          LabelTextWidth="{Binding LabelTextWidth, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
@@ -22,7 +27,75 @@
                 </i:EventTrigger>
             </i:Interaction.Triggers>
 
-        </karveControls:DataField>
+        </KarveControls:DataField>
+    </DataTemplate>
+
+    
+    <DataTemplate x:Key="BillingInterval">
+        <StackPanel Orientation="Horizontal">
+            <TextBlock Text="{Binding lplazodepago, Source={StaticResource ResourceLanguage}}" Margin="10,0,0,10"></TextBlock>
+            <KarveControls:DataField DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                     DataSourcePath="PLAZO"
+                                                     LabelVisible="False"
+                                                     TextContentWidth="50"
+                                                     Margin="0,5,0,0"
+                                                     Height="25"
+                                                     ItemChangedCommand="{Binding ItemChangedCommand}">
+
+            </KarveControls:DataField>
+
+            <KarveControls:DataField DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                     DataSourcePath="PLAZO2"
+                                                     LabelVisible="False"
+                                                     TextContentWidth="50"
+                                                     Height="25"
+                                                         Margin="0,5,0,0"
+                                                     ItemChangedCommand="{Binding ItemChangedCommand}">
+
+            </KarveControls:DataField>
+            <KarveControls:DataField DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                     DataSourcePath="PLAZO2"
+                                                     LabelVisible="False"
+                                                         Margin="0,5,0,0"
+                                                     TextContentWidth="50"
+                                                     Height="25"
+                                                     ItemChangedCommand="{Binding ItemChangedCommand}">
+
+            </KarveControls:DataField>
+            <TextBlock Text="{Binding ldiadepago, Source={StaticResource ResourceLanguage}}" Margin="5,0,0,5"></TextBlock>
+            <KarveControls:DataField DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                     DataSourcePath="DIA"
+                                                         Margin="0,5,0,0"
+                                                     LabelVisible="False"
+                                                     TextContentWidth="50"
+                                                     Height="25"
+                                                     ItemChangedCommand="{Binding ItemChangedCommand}">
+
+            </KarveControls:DataField>
+
+            <KarveControls:DataField DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                     DataSourcePath="DIA2"
+                                                         Margin="0,5,0,0"
+                                                     LabelVisible="False"
+                                                     TextContentWidth="50"
+                                                     Height="25"
+                                                     ItemChangedCommand="{Binding ItemChangedCommand}">
+
+            </KarveControls:DataField>
+
+
+            <KarveControls:DataField DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                     DataSourcePath="DIA3"
+                                                         Margin="0,5,0,0"
+                                                     LabelVisible="False"
+                                                     TextContentWidth="50"
+                                                     Height="25"
+                                                     ItemChangedCommand="{Binding ItemChangedCommand}">
+
+            </KarveControls:DataField>
+        </StackPanel>
+
+
     </DataTemplate>
     <!--
     <DataTemplate x:Key="DataFieldCheckBoxTemplate">
@@ -46,7 +119,7 @@
     -->
     <DataTemplate x:Key="DoubleDataFieldDataTemplate">
         <StackPanel Orientation="Horizontal">
-            <karveControls:DataField x:Name="FirstField" 
+            <KarveControls:DataField x:Name="FirstField" 
                                              LabelText="{Binding LabelText, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                              TextContent="{Binding TextContent, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                              TextContentWidth="{Binding TextContentWidth, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -64,8 +137,8 @@
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
 
-            </karveControls:DataField>
-            <karveControls:DataField LabelText="{Binding LabelTextRight, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+            </KarveControls:DataField>
+            <KarveControls:DataField LabelText="{Binding LabelTextRight, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                              TextContent="{Binding TextContentRight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                              TextContentWidth="{Binding TextContentWidthRight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                              LabelTextWidth="{Binding LabelTextWidthRight, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
@@ -81,12 +154,12 @@
                         <mvvm1:InvokeCommandAction Command="{Binding ChangedItem, PresentationTraceSources.TraceLevel=High}" TriggerParameterPath="ChangedValuesObjects"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
-            </karveControls:DataField>
+            </KarveControls:DataField>
         </StackPanel>
     </DataTemplate>
     <DataTemplate x:Key="EmailDataTemplate">
         <StackPanel Orientation="Horizontal">
-            <karveControls:DataField x:Name="EmailField" 
+            <KarveControls:DataField x:Name="EmailField" 
                                              LabelText="{Binding LabelText, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                              TextContent="{Binding TextContent, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                              TextContentWidth="{Binding TextContentWidth, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -106,7 +179,7 @@
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
 
-            </karveControls:DataField>
+            </KarveControls:DataField>
             <Button Command="{Binding EmailCommand}" CommandParameter="{Binding TextContent, ElementName=EmailField}">
                 <Image Source="{Binding ButtonImage}" Height="20"/>
             </Button>
@@ -114,7 +187,7 @@
     </DataTemplate>
     <DataTemplate x:Key="DualFieldSearchTextBox">
 
-        <karveControls:DualFieldSearchBox LabelText="{Binding LabelText, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+        <KarveControls:DualFieldSearchBox LabelText="{Binding LabelText, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                                   LabelVisible="{Binding LabelVisible, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                                   LabelTextWidth="{Binding LabelTextWidth, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                                   DataFieldFirst="{Binding DataFieldFirst, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -150,7 +223,7 @@
                 </i:EventTrigger>
             </i:Interaction.Triggers>
 
-        </karveControls:DualFieldSearchBox>
+        </KarveControls:DualFieldSearchBox>
     </DataTemplate>
     <template:TemplateSelector x:Key="SimpleTemplateSelector"
                                        DataFieldTemplate="{StaticResource ResourceKey=DataFieldDataTemplate}"
@@ -185,7 +258,7 @@
     </DataTemplate>
 
     <DataTemplate x:Key="DataFieldPickerTemplate">
-        <karveControls:DataDatePicker 
+        <KarveControls:DataDatePicker 
                     LabelText="{Binding LabelText, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                     LabelVisible="{Binding LabelVisible, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                     LabelTextWidth="{Binding LabelTextWidth, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
@@ -193,19 +266,19 @@
                     DataDatePickerHeight="{Binding Height, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                     DateContent="{Binding Date, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                     >
-        </karveControls:DataDatePicker>
+        </KarveControls:DataDatePicker>
     </DataTemplate>
     <DataTemplate x:Key="DataAreaTemplate">
-        <karveControls:DataArea DataSourcePath="{Binding DataField, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+        <KarveControls:DataArea DataSourcePath="{Binding DataField, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                         LabelVisible="{Binding LabelVisible, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                         LabelText="{Binding LabelText, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                         LabelTextWidth="{Binding LabelTextWidth, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                         DataAreaTitle="{Binding DataAreaTitle, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                         DataSource="{Binding ItemSource, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-        </karveControls:DataArea>
+        </KarveControls:DataArea>
     </DataTemplate>
     <DataTemplate x:Key="ComboBoxTemplate">
-        <karveControls:DataCombox
+        <KarveControls:DataCombox
                     Items="{Binding DataField, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                     DataField="{Binding DataField, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                     LabelVisible="{Binding LabelVisible, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
@@ -213,7 +286,7 @@
                     LabelText="{Binding LabelText, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                     LabelTextWidth="{Binding LabelTextWidth, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                     ItemSource="{Binding ItemSource, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-        </karveControls:DataCombox>
+        </KarveControls:DataCombox>
     </DataTemplate>
     <template:TemplateSelector x:Key="BasicTemplateSelector"
                                        DataFieldTemplate="{StaticResource ResourceKey=DataFieldDataTemplate}"
