--- a/src/Modules/MasterModule/Views/Clients/UpperBarViewClient.xaml
+++ b/src/Modules/MasterModule/Views/Clients/UpperBarViewClient.xaml
@@ -4,38 +4,40 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MasterModule.Views.Clients"
+              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:KarveControls="clr-namespace:KarveControls;assembly=KarveControls"
+             xmlns:mvvm1="http://prismlibrary.com/"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="800">
     <Grid>
         <GroupBox Header="{Binding lgeneral, Source={StaticResource ResourceLanguage}}">
             <StackPanel Name="ContextLayout" Orientation="Horizontal">
 
-                <karveControls:DataField x:Name="Numero" TextContentWidth="100" IsReadOnly="True"
+                <KarveControls:DataField x:Name="Numero" TextContentWidth="100" IsReadOnly="True"
                                      DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                                      DataSourcePath="NUMERO_CLI"
-                                     ItemChangedCommand="{Binding ChangedItem}"
                                      LabelTextWidth="50" 
+                                     Height="30"
+                                     ItemChangedCommand="{Binding ChangedItem, PresentationTraceSources.TraceLevel=High}"
                                      LabelText="{Binding lnumero, Source={StaticResource ResourceLanguage}}" LabelVisible="True">
-                    <i:Interaction.Triggers>
-                        <i:EventTrigger EventName="DataFieldChanged">
-                            <mvvm1:InvokeCommandAction Command="{Binding ChangedItem, PresentationTraceSources.TraceLevel=High}" 
-                                               TriggerParameterPath="ChangedValuesObjects"/>
-                        </i:EventTrigger>
-                    </i:Interaction.Triggers>
-
-                </karveControls:DataField>
-                <karveControls:DataField x:Name="Nombre" TextContentWidth="150" DataObject="{Binding DataObject, 
+            
+                </KarveControls:DataField>
+                <KarveControls:DataField x:Name="Nombre" TextContentWidth="150" DataObject="{Binding DataObject, 
                                 Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" DataSourcePath="NOMBRE" 
                                             ItemChangedCommand="{Binding ChangedItem}"
-                                     LabelTextWidth="50" LabelText="{Binding lnombre, Source={StaticResource ResourceLanguage}}" LabelVisible="True">
-                </karveControls:DataField>
-                <karveControls:DataField x:Name="Nif"  LabelText="{Binding lnif, Source={StaticResource ResourceLanguage}}" TextContentWidth="100" 
+                                                              Height="30"
+            
+                                         LabelTextWidth="50" LabelText="{Binding lnombre, Source={StaticResource ResourceLanguage}}" LabelVisible="True">
+                </KarveControls:DataField>
+                <KarveControls:DataField x:Name="Nif"  LabelText="{Binding lnif, Source={StaticResource ResourceLanguage}}" TextContentWidth="100" 
                                          DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                                                                  Height="30"
+            
                                          DataSourcePath="NIF" LabelTextWidth="50"  
                                          ItemChangedCommand="{Binding ChangedItem}"
                                          LabelVisible="True">
                    
-                </karveControls:DataField>
+                </KarveControls:DataField>
                
             </StackPanel>
         </GroupBox>
